--- a/package.json
+++ b/package.json
@@ -3,45 +3,76 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev --turbopack",
+    "postinstall": "prisma generate",
+    "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.11.1",
     "@neondatabase/serverless": "^1.0.2",
-    "@prisma/adapter-pg": "^7.2.0",
-    "@prisma/client": "^7.2.0",
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-slot": "^1.2.4",
-    "@radix-ui/react-tooltip": "^1.2.8",
-    "@types/pg": "^8.16.0",
-    "class-variance-authority": "^0.7.1",
+    "@prisma/adapter-neon": "^7.1.0",
+    "@prisma/client": "^7.1.0",
+    "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-aspect-ratio": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
+    "@radix-ui/react-tooltip": "^1.1.2",
+    "@types/node": "20.14.10",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-copy-to-clipboard": "^5.0.7",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "@vercel/analytics": "^1.3.1",
+    "autoprefixer": "^10.4.19",
+    "bcrypt-ts": "^5.0.3",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "dotenv": "^17.2.3",
-    "framer-motion": "^12.24.0",
-    "lucide-react": "^0.562.0",
-    "next": "16.1.1",
-    "next-auth": "^5.0.0-beta.30",
-    "pg": "^8.16.3",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
-    "tailwind-merge": "^3.4.0",
-    "tsx": "^4.21.0",
-    "ws": "^8.18.3"
+    "drizzle-kit": "^0.22.8",
+    "drizzle-orm": "^0.31.2",
+    "drizzle-zod": "^0.5.1",
+    "embla-carousel-autoplay": "^8.3.1",
+    "embla-carousel-react": "^8.3.1",
+    "framer-motion": "^11.11.0",
+    "lucide-react": "^0.400.0",
+    "next": "15.0.6",
+    "next-auth": "^5.0.0-beta.25",
+    "next-themes": "^0.3.0",
+    "postcss": "^8.4.39",
+    "posthog-js": "^1.187.2",
+    "prettier": "^3.3.2",
+    "prisma": "^7.1.0",
+    "prop-types": "^15.8.1",
+    "react": "19.0.0-rc-66855b96-20241106",
+    "react-canvas-confetti": "^2.0.7",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-hook-form": "^7.53.2",
+    "server-only": "^0.0.1",
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss": "^3.4.4",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "5.5.3",
+    "uuidv4": "^6.2.13",
+    "zod": "^3.23.8"
+  },
+  "prettier": {
+    "arrowParens": "always",
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "none"
+  },
+  "resolutions": {
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^25.0.3",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/ws": "^8.18.1",
-    "eslint": "^9",
-    "eslint-config-next": "16.1.1",
-    "prisma": "^7.2.0",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.4.0",
-    "typescript": "^5.9.3"
+    "@types/pg": "^8.16.0"
   }
 }
