--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@neondatabase/serverless": "^1.0.2",
     "@prisma/adapter-neon": "^7.1.0",
     "@prisma/client": "^7.1.0",
+    "@prisma/studio-server": "^0.511.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -74,6 +75,7 @@
   },
   "devDependencies": {
     "@types/pg": "^8.16.0",
+    "dotenv-cli": "^11.0.0",
     "eslint": "^9.39.2"
   }
 }
