--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.3",
     "@types/pg": "^8.16.0",
     "dotenv-cli": "^11.0.0",
     "eslint": "^9.39.2"
