--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "@prisma/client": "^7.1.0",
     "@prisma/studio-server": "^0.511.0",
     "@radix-ui/react-accordion": "^1.2.1",
-    "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
-    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.2",
@@ -43,7 +43,7 @@
     "lucide-react": "^0.400.0",
     "next": "15.0.6",
     "next-auth": "^5.0.0-beta.25",
-    "next-themes": "^0.3.0",
+    "next-themes": "^0.4.6",
     "postcss": "^8.4.39",
     "posthog-js": "^1.187.2",
     "prettier": "^3.3.2",
@@ -55,11 +55,12 @@
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
     "server-only": "^0.0.1",
-    "sonner": "^1.5.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.4",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.5.3",
+    "uuid": "^13.0.0",
     "uuidv4": "^6.2.13",
     "zod": "^3.23.8"
   },
