--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
+    "recharts": "^3.6.0",
     "server-only": "^0.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.3.0",
